syntax = "proto3";
package pb;

//The Events service definition.
service Events {
 rpc GetEvents (GetEventsRequest) returns (GetEventsReply);
 rpc AddEvent  (AddEventRequest ) returns (AddEventReply );
}

message GetEventsRequest {}

message GetEventsReply {}

message AddEventRequest {}

message AddEventReply {}
